# gcse-programming-project

./: .breakpoints  .gitignore  .replit  Aircraft.txt  README.md  TODO.md  insomnia-config.yaml  pyproject.toml  wsgi.py
api-docs/: README.md
profit_calculator/: __init__.py  __main__.py  api.py  views.py
profit_calculator/static/: style.css
profit_calculator/static/api-docs/: insomnia.json
profit_calculator/templates/: airport.html  api-docs.html  base.html  clear.html  exports.html  flight.html  index.html  price.html  profit.html
