[tool]
[tool.poetry]
authors = ["Matthew Occleshaw"]
name = "GCSE Programming Project"
version = "1.0"
description="Flask app for calculating the potential profit of a flight plan from inputted data."
[tool.poetry.dependencies]
flask = "^2.0.0"
python = "^3.8"
colorama = "^0.4.4"
types-Flask = "^1.1.1"
waitress = "^2.0.0"
python-dotenv = "^0.18.0"
itsdangerous = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
pytest = "^6.2.4"
mypy = "^0.910"
isort = "^5.9.1"
